--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: 'Quicksand';
+    src: url('/static/fonts/Quicksand-Bold.ttf'),
+         url('/static/fonts/Quicksand-Light.ttf'),
+         url('/static/fonts/Quicksand-Medium.ttf'),
+         url('/static/fonts/Quicksand-Regular.ttf'),
+         url('/static/fonts/Quicksand-SemiBold.ttf');
+}
+
 html, body {
     height: 100%;
 }
@@ -6,7 +15,7 @@ body {
     width: 100%;
     min-height: 100%;
     background-color: #ffffff;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif;
+    font-family: 'Quicksand', sans-serif;
     font-size: 11px;
 }
 
@@ -91,12 +100,12 @@ h3 {
     margin: 0;
     padding-bottom: 0;
     padding-top: 0;
-    background-color: #363636;
+    background-color: #0c0c0c;
     border: 0;
 }
 
 .bg-trezor {
-    background-color: #363636!important;
+    background-color: #0c0c0c!important;
     padding-top: 3px;
     padding-bottom: 2px;
     z-index: 2;
@@ -127,7 +136,7 @@ h3 {
 }
 
 #footer {
-    background-color: #363636;
+    background-color: #0c0c0c;
     color: #fff;
     height: 42px;
     overflow: hidden;
