--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'Quicksand';
-    src: url('/static/fonts/Quicksand-Bold.ttf'),
-         url('/static/fonts/Quicksand-Light.ttf'),
-         url('/static/fonts/Quicksand-Medium.ttf'),
-         url('/static/fonts/Quicksand-Regular.ttf'),
-         url('/static/fonts/Quicksand-SemiBold.ttf');
+    src: url('/static/fonts/Nunito-Bold.ttf'),
+         url('/static/fonts/Nunito-Light.ttf'),
+         url('/static/fonts/Nunito-Black.ttf'),
+         url('/static/fonts/Nunito-Regular.ttf'),
+         url('/static/fonts/Nunito-SemiBold.ttf');
 }
 
 html, body {
@@ -100,12 +100,12 @@ h3 {
     margin: 0;
     padding-bottom: 0;
     padding-top: 0;
-    background-color: #0c0c0c;
+    background-color: #121212;
     border: 0;
 }
 
 .bg-trezor {
-    background-color: #0c0c0c!important;
+    background-color: #121212!important;
     padding-top: 3px;
     padding-bottom: 2px;
     z-index: 2;
@@ -136,7 +136,7 @@ h3 {
 }
 
 #footer {
-    background-color: #0c0c0c;
+    background-color: #121212;
     color: #fff;
     height: 42px;
     overflow: hidden;
